# muni-data

./: .gitignore  Dockerfile  Makefile  README.md  poetry.toml  pyproject.toml
.github/workflows/: checks.yml
conf/: config.yaml
config/: .bumpversion.cfg  pytest.ini
docs/: cloud_run_pipeline_setup.md  local_dev_and_testing.md
notebooks/: 0-511-transit-api-calls-examples.ipynb  1-muni-data-package.ipynb
scripts/: muni_data_pipeline.sh
src/muni-data/: main.py
src/muni-data/etl/: extract.py  load.py
src/muni_data/: __init__.py  __main__.py  main.py
src/muni_data/command/: cli.py  operators_cli.py
src/muni_data/etl/: extract.py  load.py  save.py  transform.py  utils.py
tests/: test_cli.py
